# apex_energy_arbitrage

./: New Text Document.txt  best_candidate.py  optimizer_correctness_test.py  paired_evaluation.py  submit.py  submit_benchmark_summary.md
energy_arbitrage/: README.md
energy_arbitrage/rust/eval/: Cargo.toml
energy_arbitrage/rust/eval/src/: lib.rs
energy_arbitrage/rust/eval/src/energy_arbitrage/baselines/: greedy.rs
sandbox/: _tmp_finegrid.py  arch_b_test.py  baseline_diagnostic.md  baseline_diagnostic.py  baseline_only_score.py  benchmark.py  causal_regret_audit.py  compare_actions.py  compare_policies_seed123.py  compare_policies_seed123_results.csv  congested_987654_detailed.csv  congested_987654_trace.csv  congested_trace.py  congested_worst6_trace.csv  congested_worst6_trace.py  evaluate_staged_policy.py  fvi_common.py  fvi_generate_data.py  fvi_model.json  fvi_model_compact.json  fvi_report.md  fvi_train.py  instance_report.py  instance_report_results.csv  lp_degeneracy_test.py  oracle_987654_congested.csv  oracle_analysis.py  oracle_analysis_results.csv  oracle_certified.py  oracle_certified_results.csv  oracle_red_team.py  oracle_red_team_report.md  oracle_red_team_results.csv  policy_fvi.py  policy_v2_2_benchmark_results.csv  policy_v2_2_benchmark_summary.md  policy_v2_3_benchmark_results.csv  policy_v2_3_benchmark_summary.md  policy_v2_dev100_benchmark_results.csv  policy_v2_dev100_benchmark_summary.md  (+30 more)
submit/: new_candidate7336732.py  policy7685140.py  policy7685265.py  policy7710674.py  policy7878240.py  policy7895191.py  policy_v5.py  (+1 more)
test/: test.py  (+3 more)
(+52 files in other folders)
